--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,17 +2,66 @@
 %html{ :lang => "en"}
   %head
     %meta{ :charset => "utf-8" }
-    
+
     %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }
 
-    %title= content_for?(:title) ? yield(:title) : "Untitled"
+    %title= content_for?(:title) ? yield(:title) : "Tim Likes to Make Things"
 
     = stylesheet_link_tag "application"
     = javascript_include_tag "vendor/custom.modernizr"
     = csrf_meta_tag
 
   %body
+    %nav.top-bar{ data: { topbar: true } }
+      %ul.title-area
+        %li.name
+          %h1
+            = link_to 'Tim Likes to Make Things', root_url
+        %li.toggle-topbar.menu-icon
+          = link_to '#' do
+            %span Menu
 
-    = yield
+      %section.top-bar-section
+        %ul.right
+          %li= link_to 'Live', '#'
+          %li= link_to 'Shows', '#'
+          %li= link_to 'Advertise', '#'
+          %li= link_to 'Membership', '#'
+          %li= link_to 'Contact', '#'
+          - if signed_in?
+            %li.has-dropdown
+              = link_to current_user.full_name, '#'
+              %ul.dropdown
+                %li= link_to 'Admin', admin_root_path
+                %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
 
-    = javascript_include_tag "application"
+    %section{ role: 'main' }
+       - flash.each do |key, val|
+        .alert-box{ data: { alert: true } }
+          = val
+          = link_to '&times;'.html_safe, '#', class: 'close'
+      .row
+        .large-12
+          = yield
+
+    %section{ style: 'background: #EEE; margin-top: 100px'}
+      .row{ style: 'padding-top: 20px' }
+        .large-3.columns
+          %h6 Dive In
+          %ul.side-nav
+            %li= link_to 'About Goodstuff.fm', '#'
+            %li= link_to 'Goodstuff.fm on iTunes', '#'
+            %li= link_to 'Master RSS Feed', '#'
+            %li= link_to 'Advertise with Us', '#'
+        .large-5.columns
+          %h6 Broadcasts
+          %ul.inline-list
+            %li= image_tag 'http://placehold.it/80x80'
+            %li= image_tag 'http://placehold.it/80x80'
+            %li= image_tag 'http://placehold.it/80x80'
+            %li= image_tag 'http://placehold.it/80x80'
+
+        .large-4.columns
+          %h6 Subscribe to the Goodstuff.fm Newsletter
+
+    = javascript_include_tag 'application'
