--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,8 @@
             %li.has-dropdown
               = link_to current_user.full_name, '#'
               %ul.dropdown
-                %li= link_to 'Admin', admin_root_path
+                - if current_user.admin?
+                  %li= link_to 'Admin', admin_root_path
                 %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
 
     %section{ role: 'main' }
