--- a/app/views/manage/posts/_form.html.haml
+++ b/app/views/manage/posts/_form.html.haml
@@ -1,5 +1,7 @@
 = simple_form_for [:manage, @post] do |f|
   = f.input :title
+  - if @post.persisted?
+    = f.input :slug
   = f.input :state, as: :select, collection: Post::States::ALL, include_blank: false
   = f.input :post_content
 
