--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,6 +33,7 @@
             %li.has-dropdown
               = link_to current_user.full_name, '#'
               %ul.dropdown
+                %li= link_to 'Edit Profile', edit_current_user_path
                 %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
 
     %section{ role: 'main' }
