Adding User info to the front end

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,6 +38,7 @@
             %li.has-dropdown
               = link_to current_user.full_name, '#'
               %ul.dropdown
+                %li= link_to 'Edit Profile', edit_current_user_path
                 %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
           - else
             %li= link_to 'Login', new_user_session_path
