--- a/app/assets/stylesheets/_redbat/_bits.scss
+++ b/app/assets/stylesheets/_redbat/_bits.scss
@@ -21,12 +21,17 @@ COLORS
 Color Variables
 ------------------------------------------- */
 
-// $darkColor: ;
-// $bodyColor: ;
-// $linkColor: ;
+$darkColor: #354051;
+$bodyBackColor: #ebf1f5;
+$bodyColor: #4e515e;
+$linkColor: #60b0c5;
 $borderColor: #eee;
-// $jazzColor: ;
-// $alertColor: ;
+$jazzColor: #e46b60;
+
+$alertColor: #ecc8c5;
+$infoColor: #cee8f5;
+$warningColor: #f8f3d6;
+$successColor: #def2d6;
 
 
 
