--- a/app/assets/stylesheets/_redbat/_bits.scss
+++ b/app/assets/stylesheets/_redbat/_bits.scss
@@ -50,3 +50,11 @@ $spacing-s: 30px;
 $spacing-m: 40px;
 $spacing-l: 50px;
 $spacing-xl: 60px;
+
+
+/*
+
+OTHER VARIABLES
+------------------------------------------- */
+
+$borderRadius: 3px;
