--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -1,3 +1,2 @@
-.small-12.medium-8.columns.medium-centered
-  %h1 New User
-  = render partial: 'form'
+= content_for :title, 'New User'
+= render partial: 'form'
