Adding comment form to posts page

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -8,3 +8,8 @@
     = render @comments
 
 
+  %h4
+  = simple_form_for [@post, @comment] do |f|
+    = f.input :body, placeholder: 'Add a comment…'
+    = f.submit class: 'button radius'
+
