Removing link to create new comment from manage

--- a/app/views/manage/comments/index.html.haml
+++ b/app/views/manage/comments/index.html.haml
@@ -1,5 +1,4 @@
-%h1 #{@post.title} Links
-%h3.subheader= link_to 'New Comment', new_manage_post_comment_path(@post)
+%h1 #{@post.title} - Comments
 
 - if @comments.present?
   %ul
