--- a/app/assets/stylesheets/_redbat/_buttons.scss
+++ b/app/assets/stylesheets/_redbat/_buttons.scss
@@ -16,6 +16,7 @@ BUTTONS
 
 button, .button {
   background: $linkColor;
+  margin-top: $spacing-xxs;
   &:hover {
     background: darken($linkColor, 10%);
   }
