--- a/app/views/manage/posts/_form.html.haml
+++ b/app/views/manage/posts/_form.html.haml
@@ -5,4 +5,4 @@
   = f.input :state, as: :select, collection: Post::States::ALL, include_blank: false
   = f.input :post_content
 
-  = f.submit
+  = f.submit class: 'button radius'
