--- a/app/assets/stylesheets/_layout/_maincontent.scss
+++ b/app/assets/stylesheets/_layout/_maincontent.scss
@@ -11,27 +11,24 @@ MAIN CONTENT
 
 .content__wrapper {
   box-shadow: 0 1px 2px darken($bodyBackColor, 3%);
-  margin: $spacing-l 0 $spacing-m $spacing-m;
-  max-width: 700px;
+  margin: $spacing-l $spacing-m;
+  // max-width: 700px;
+  position: relative;
 }
 
 .white-panel {
   background: white;
   border: 1px solid darken($bodyBackColor, 5%);
-  border-top: none;
-  border-radius: 0 0 $borderRadius $borderRadius;
+  border-radius: $borderRadius;
   padding: $spacing-s;
 }
 
-.page-title {
-  background: $jazzColor;
-  border-radius: $borderRadius $borderRadius 0 0;
-  border: 1px solid darken($jazzColor, 5%);
-  // border-bottom: none;
-  color: white;
-  font-weight: normal;
-  margin: 0;
-  padding: $spacing-xs $spacing-s;
+.page__title {
+  margin-bottom: $spacing-s;
+  h1, h2 {
+    margin: 0;
+    line-height: 110%;
+  }
 }
 
 
@@ -58,12 +55,6 @@ MAIN CONTENT
       width: 200px;
       height: 5px;
     }
-  }
-}
-
-.comment-author__picture {
-  img {
-    border-radius: 150px;
   }
 }
 
