--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -1,1 +1,5 @@
-%li= link_to user.full_name, edit_admin_user_path(user)
+%tr
+  %td= image_tag gravatar_url(user), height: '50', width: '50', class: 'user__picture'
+  %td= link_to user.full_name, edit_admin_user_path(user)
+  %td= mail_to user.email
+  %td= user.role
