--- a/app/views/manage/comments/_comment.html.haml
+++ b/app/views/manage/comments/_comment.html.haml
@@ -1,1 +1,13 @@
-%li= link_to "Comment", edit_manage_post_comment_path(id: comment, post_id: @post)
+%tr
+  %td= image_tag gravatar_url(comment.user), height: '50', width: '50', class: 'comment-author__picture'
+  %td
+    %strong= comment.user.full_name
+  %td
+    %p.pubdate.size-m
+      Submitted on #{local_time(comment.created_at)}
+    = markdown comment.body
+    %p.size-s
+      = link_to "Edit", edit_manage_post_comment_path(id: comment, post_id: @post)
+      &middot;
+      = link_to 'Delete', manage_post_comment_path(id: comment, post_id: @post),
+      method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }
