--- a/app/views/manage/posts/_post.html.haml
+++ b/app/views/manage/posts/_post.html.haml
@@ -1,3 +1,7 @@
-%li= link_to post.title, edit_manage_post_path(post)
-
-%h5= link_to "Comments", manage_post_comments_path(post_id: post)
+%tr
+  %td
+    %strong
+      = link_to post.title, edit_manage_post_path(post)
+  %td= local_time(post.created_at)
+  %td= link_to "Comments", manage_post_comments_path(post_id: post)
+  %td= link_to 'Delete', manage_post_path(post), method: :delete, data: { confirm: 'Are you sure you want to delete this post?' }, class: 'delete-link'
