--- a/app/assets/stylesheets/_redbat/_type.scss
+++ b/app/assets/stylesheets/_redbat/_type.scss
@@ -113,7 +113,7 @@ TEXT
   font-size: 95%;
 }
 
-.pubdate {
+.pubdate, .slug {
   color: lighten($bodyColor, 20%);
   margin-bottom: $spacing-xxs;
 }
