--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -20,9 +20,7 @@
     .wrapper
       %aside.site__sidebar
         %header.site__header
-          .logo
-            = link_to posts_path do
-              = image_tag 'http://placehold.it/250x250'
+          = link_to 'Tim Likes to Make Things', posts_path, class: 'logo'
         %nav.site__navigation
         - if signed_in?
           - if current_user.admin?
