--- a/app/views/manage/comments/_comment.html.haml
+++ b/app/views/manage/comments/_comment.html.haml
@@ -9,5 +9,5 @@
     %p.size-s
       = link_to "Edit", edit_manage_post_comment_path(id: comment, post_id: @post)
       &middot;
-      = link_to 'Delete', manage_post_comment_path(id: comment, post_id: @post),
+      = link_to 'Delete', manage_post_comment_path(id: comment, post_id: @post), class: 'delete-link',
       method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }
