--- a/app/views/manage/posts/edit.html.haml
+++ b/app/views/manage/posts/edit.html.haml
@@ -1,3 +1,3 @@
 = content_for :title, 'Edit Post'
-= content_for :subtitle, "#{@post.title}"
+= content_for :subtitle, "#{@post.title.titleize}"
 = render partial: 'form'
