--- a/app/views/manage/posts/edit.html.haml
+++ b/app/views/manage/posts/edit.html.haml
@@ -1,3 +1,3 @@
 = content_for :title, 'Edit Post'
-= content_for :subtitle, "#{@post.title.titleize}"
+= content_for :subtitle, "#{rubypants(@post.title.titleize)}".html_safe
 = render partial: 'form'
