--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,6 +1,7 @@
 %li.post
   %h3
-    = link_to post.title.titleize, post_path(post)
+    = link_to post_path(post) do
+      = rubypants post.title.titleize
     %small #{post.comment_count} #{"Comment".pluralize(post.comment_count)}
   %p.pubdate.size-s
     Posted on #{post.user.full_name} #{local_time_ago(post.created_at)}
