Adding font awesome
adding animation to forms in app for better experience

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -33,6 +33,8 @@ Importing the awesome-sauce that is Bourbon
 ------------------------------------------- */
 
 @import "bourbon";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 
 /*
