--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -63,10 +63,14 @@
                 = link_to new_manage_post_path do
                   %span.fa.fa-pencil-square-o
                   New Post
-            %li
-              = link_to destroy_user_session_path, method: :delete do
-                %span.fa.fa-sign-out
-                Log Out
+          .top-bar__user
+            = image_tag avatar_url(current_user), height: '40', width: '40', class: 'user__picture'
+            = link_to "#", class: 'toggleNav' do
+              %span.fa.fa-chevron-down
+            %ul.top-bar__dropdown
+              %li= link_to 'Edit Profile', edit_current_user_path
+              %li= link_to 'Log Out', destroy_user_session_path, method: :delete
+
 
 
         .content__wrapper
